srcs/ICAP_RelationService/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icap-relationservice
  labels:
    app: icap-relationservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: icap-relationservice
  template:
    metadata:
      labels:
        app: icap-relationservice
    spec:
      containers:
        - name: icap-relationservice
          image: icapregistry.azurecr.io/icap-relationservice:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-store-relationservice
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-relationservice
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "icap-relationservice-kv"
