srcs/ICAP_RelationService/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icap-relationservice
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: icap-relationservice
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
