srcs/ICAP_RelationService/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://icap-vault.vault.azure.net/certificates/ICAP-AKS-CERT/687ed42192e443cdaa9635d5ab67a960    
  name: icap-relationservice
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
    host: aks.odb-tech.com
      paths:
      - path: /relations
        pathType: Prefix
        backend:
          service:
            name: icap-relationservice
            port: 
              number: 80
  tls:
  - hosts: aks.odb-tech.com
    secretName: keyvault-icap-relationservice
